--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-logging.level.com.exemple=DEBUG
 
-logging.level.root=INFO
-logging.level.org.springframework.web=DEBUG
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+spring.data.mongodb.uri=mongodb://localhost:27017/workshop_mongo
