--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
             <version>3.1.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.10.2</version> <!-- Use a versão mais recente disponível -->
+        </dependency>
     </dependencies>
 
     <build>
